--- a/seo.html
+++ b/seo.html
@@ -25,17 +25,49 @@
 	</section>
 	
 	  <section >
-        <div class="container" style=" height:400px; background-image: url(); background-repeat: no-repeat !important;">
+        <div class="container" style=" height:400px; background-image: url(Réduction_Active_du_Bruit.png); background-repeat: no-repeat !important;">
         </div>
       </section>
 	
 
 	<section>
         <div class="container box">
-            <h2 class="title is-2">Tutoriel : Créer sa cryptomonnaie en 10 minutes avec moins de 5€</h2>
-            <p class="is-size-4">Vous suivez probablement l'actualité de la cryptomonnaie, leur nombre explose. La majorité d'entre elles sont ce que l'on appelle vulgairement sur la toile des "shit coins, des crypo tokens de niveau 2 qui se reposent sur une infrastructure Blockchain existante et qui sont rattachés à aucun projet solide.</p>
-            <p is-size-5><span>Publié par : </span><span> le 01/03/2022</span></p>
+            <h2 class="title is-2">Principe de base</h2>
+            <p class="is-size-4">Le bruit est un son indésirable. Le son est une fluctuation de pression. 
+		    Si une source auxiliaire (dite secondaire) émet une onde de pression (un son) avec la même amplitude et en opposition de phase 
+		    avec le son indésirable, les deux champs de pression se superposent pour donner le silence. 
+		    Quand deux ondes sont en opposition de phase, le maximum positif de l'une coïncide avec le maximum négatif de 
+		    l'autre et réciproquement : la somme des deux ondes s'annule. Dans la pratique on n'obtient pas exactement le silence mais une réduction du bruit
+		    plus ou moins importante en fonction de  la méthode utilisée pour générer le signal qui s'oppose au bruit2. </p>
         </div>
+	<div class="container box">
+            <p class="is-size-4">On crée une boucle de contre-réaction qui comprend un microphone et un haut-parleur alimenté par un signal
+		    constitué par la différence entre le signal qu'on voudrait entendre (silence ou communication) et celui du microphone.
+		 Dans les systèmes utilisés actuellement, les sources secondaires émettent un bruit calculé en temps réel par des DSP (processeurs dédiés au traitement du signal). </p>
+        </div>
+	</section>
+	<section>
+        <div class="container box">
+            <h2 class="title is-2">Avantages du contrôle actif du bruit</h2>
+		<p class="is-size-4">Parmi les avantages du contrôle actif on note :</p>
+    		<p class="is-size-4">une efficacité accrue pour le traitement des basses fréquences, pour lesquelles les matériaux absorbants acoustiques
+			passifs sont peu efficaces sauf en forte épaisseur (donc encombrement)</p>
+           	<p class="is-size-4">un encombrement et une masse réduite (particulièrement recherché en aéronautique) </p>
+    		<p class="is-size-4">une capacité de traitement sélective (notions de design sonore): on peut, en réglant le générateur de signal, 
+			modifier l'impédance acoustique de la paroi sur laquelle est installé le système, et ainsi modifier instantanément 
+			la réverbération de cette paroi.</p>
+        </div>
+	</section>
+	<section>
+        <div class="container box">
+            <h2 class="title is-2"></h2>
+		<p class="is-size-4">Exemples d'applications</p>
+    		<p class="is-size-4">le casque antibruit actif ;</p>
+           	<p class="is-size-4">la réduction du bruit dans les gaines de ventilation ;</p>
+    		<p class="is-size-4">la réduction du bruit dans les aéronefs</p>
+        </div>
+	</section>
+	
 </body>
 
 </html>
