--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</section>
 	
 	  <section >
-        <div class="container" style=" height:400px; background-image: url(Réduction_Active_du_Bruit.png); background-repeat: no-repeat !important;">
+        <div class="container" style=" height:400px; background-image: url(anc.png); background-repeat: no-repeat !important;">
         </div>
       </section>
 	
