--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</section>
 	
 	  <section >
-        <img src="anc.png" style="height:400px" alt="reduction de bruit">
+        <div class="container" style=" height:400px; background-image: url(anc.png); background-repeat: no-repeat !important;">
         </div>
       </section>
 	
